--- a/chromeExtension/manifest.json
+++ b/chromeExtension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "drTranscribe",
+  "name": "MedLog",
   "version": "2.0.0",
-  "description": "Real-time clinical extraction from video consultations",
+  "description": "Medical Conversations, Perfectly Logged - Real-time clinical extraction",
   "permissions": [
     "activeTab",
     "tabCapture",
@@ -42,5 +42,15 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/logo.png"],
+      "matches": [
+        "https://meet.google.com/*",
+        "https://app.zoom.us/*",
+        "https://zoom.us/*"
+      ]
+    }
+  ]
 }
